perf: ♻️ JVM bellek yönetiminde GC stratejilerini yapılandırdım ve tanımladım
G1, ZGC ve Shenandoah’ın JVM’de farklı Garbage Collection yaklaşımları sunduğunu ve -XX flag’leriyle seçilebildiğini uygulamalı olarak gördüm. ⚙️ Böylece GC seçiminin, Heap’in nasıl temizlendiği ve uygulamanın duraklama davranışı üzerinde doğrudan etkili olduğunu netleştirdim.